--- a/RabbitMQ.Worker/RabbitMQ.Worker.csproj
+++ b/RabbitMQ.Worker/RabbitMQ.Worker.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>48c37d2a-b08c-4af1-9c1f-0bff33884aeb</UserSecretsId>
+    <UserSecretsId>dotnet-RabbitMQ.Worker-0C082E26-0C32-4EA8-AFEA-A6DCC767F7B9</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
@@ -10,14 +10,11 @@
     <PackageReference Include="MassTransit" Version="7.3.0" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RabbitMQ.Models\RabbitMQ.Models.csproj" />
   </ItemGroup>
-
-
 </Project>
